# school-tests-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  test_students.py
backend/: Dockerfile  pyproject.toml  test_auth.py
backend/accounts/: admin.py  api.py  models.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/core/: api.py  settings.py  urls.py
backend/exams/: admin.py  api.py  models.py
backend/exams/migrations/: 0001_initial.py  0002_rename_end_at_testattempt_finished_at_and_more.py
database/: schema.sql
documentation/: BACKEND_SPEC.md  DB_SPEC.md  DESIGN.md  FRONTEND_SPEC.md  MOBILE_SPEC.md  PRD.md  TechSpecs.md  architecture_and_implementation.md  arquitetura_mermeid.txt  backend_guide.md  cadastro.html  create_test.html  frontend_guide.md  landing_page.html  login_mobile.html  login_web.html  mobile_guide.md  student_dashboard.html  student_do_test.html  teacher_dashboard.html
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/create-question/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
mobile/: pubspec.yaml
mobile/lib/: main.dart
mobile/lib/core/: api_constants.dart  app_theme.dart  db_helper.dart
mobile/lib/models/: exam_models.dart
mobile/lib/providers/: auth_provider.dart  test_provider.dart
mobile/lib/screens/: dashboard_screen.dart  login_screen.dart  register_screen.dart  test_execution_screen.dart
mobile/lib/services/: api_service.dart  database_helper.dart
(+6 files in other folders)
