[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-environ>=0.13.0",
    "django-ninja>=1.6.2",
    "django-ninja-jwt>=5.3.2",
    "psycopg2-binary>=2.9.12",
    "google-auth>=2.50.0",
    "requests>=2.32.0",
    "django-cors-headers>=4.6.0",
]
